fix h spacing for consecutive p tags

--- a/sass/blocks/_site.scss
+++ b/sass/blocks/_site.scss
@@ -19,4 +19,8 @@
     padding-right: $rhythm__base / 2;
     padding-left: $rhythm__base / 2;
   }
+
+  p + p {
+    margin-top: $rhythm__base/2;
+  }
 }
