--- a/style.css
+++ b/style.css
@@ -573,6 +573,9 @@ a {
     padding-right: 0.75rem;
     padding-left: 0.75rem; } }
 
+.site__main p + p {
+  margin-top: 0.75rem; }
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
